update icon-film for correct displaying in safari and on iphones

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -111,6 +111,8 @@ li {
   display: inline;
   cursor: pointer;
   margin-right: 10px;
+  width: 24px;
+  height: 24px;
 }
 
 .warning {
